--- a/Test/Balaji.html
+++ b/Test/Balaji.html
@@ -7,3 +7,12 @@
 <h1>Hi HTML !!! By Balaji...</h1>
 </body>
 </html>
+<<!DOCTYPE html>
+<html>
+<head>
+	<title> Hello Balaji </title>
+</head>
+<body>
+<h2> Hello </h2>
+</body>
+</html>
