--- a/Test/Balaji.html
+++ b/Test/Balaji.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Hi HTML !!!</title>
+	<title>Hi </title>
 </head>
 <body>
-<h1>Hi HTML !!! By Balaji...</h1>
+<h1 style="background-color:blue;"> Hi HTML !!! By Balaji...</h1>
 </body>
 </html>
 <<!DOCTYPE html>
 <html>
 <head>
-	<title> Hello Balaji </title>
+	<title> Hello </title>
 </head>
 <body>
-<h5> Hello Balaji </h2>
+<h1 style="outline-color:lightgrey;"> Hello Balaji </h1>
 </body>
 </html>
