--- a/Test/Balaji.html
+++ b/Test/Balaji.html
@@ -13,6 +13,6 @@
 	<title> Hello </title>
 </head>
 <body>
-<h1 style="outline-color:lightgrey;"> Hello Balaji </h1>
+<h1 style="font-variant-alternates: historical-forms,style=background-color: green"> Hello Balaji </h1>
 </body>
 </html>
