--- a/Test/Balaji.html
+++ b/Test/Balaji.html
@@ -7,12 +7,12 @@
 <h1 style="background-color:blue;"> Hi HTML !!! By Balaji...</h1>
 </body>
 </html>
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
 	<title> Hello </title>
 </head>
 <body>
-<h1 style="font-variant-alternates: historical-forms,style=background-color: green"> Hello Balaji </h1>
+<h1 style="font-family:fantasy" color="green"> Hello Balaji </h1>
 </body>
 </html>
