--- a/Test/Balaji.html
+++ b/Test/Balaji.html
@@ -13,6 +13,6 @@
 	<title> Hello </title>
 </head>
 <body>
-<h1 style="font-family:fantasy" style="border-color: green;"> Hello Balaji </h1>
+<h1 style="font-family:fantasy" style="color:green;"> Hello Balaji </h1>
 </body>
 </html>
