--- a/Test/Balaji.html
+++ b/Test/Balaji.html
@@ -6,11 +6,10 @@
 <body>
 <h1 style="color: green; background-color: blue; text-align: center; font-size: 120px"> Hi HTML !!!</h1>
  <p> By Balaji...</p>
-  <p1> Let's Make the Learning Fun always...</p1>
-  <p2 id="myId"></p2> 
+  <p1> Let's Make the Learning Fun always...</p1> 
   <footer> 
     <p style="text-align: right;"
-            onclick="alert('Never Email It is Just for fun');">
+            onmouseover="alert('Never Email It is Just for fun');">
             Technician:balaji.rajendran7@gmail.com
     </p>
   </footer>
