--- a/Test/Balaji.html
+++ b/Test/Balaji.html
@@ -9,7 +9,7 @@
   <p1> Let's Make the Learning Fun always...</p1> 
   <footer> 
     <p style="text-align: right;"
-            onmousemove="alert('Never Email It is Just for fun');">
+            onmousemove="Never Email It is Just for fun");">
             Technician:balaji.rajendran7@gmail.com
     </p>
   </footer>
